--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "start": "electron .",
     "dist": "npm run build && electron-builder",
-    "dist32": "npm run build && electron-builder --win --ia32"
+    "dist32": "npm run build && electron-builder --win --ia32",
+	"deploy": "npm run build && gh-pages -d dist -f"
   },
   "dependencies": {
     "exceljs": "^4.4.0",
@@ -26,11 +27,13 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
     "electron": "^22.3.27",
     "electron-builder": "^26.0.12",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.0",
@@ -39,15 +42,15 @@
   "description": "- **Node.js** (version 16 or higher) - [Download here](https://nodejs.org/)  - **npm** or **yarn** package manager  - Code editor (VS Code recommended)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chinu89/G-GServicePro.git"
+    "url": "git+https://github.com/chinu89/SocietyLedger.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/chinu89/G-GServicePro/issues"
+    "url": "https://github.com/chinu89/SocietyLedger/issues"
   },
-  "homepage": "https://github.com/chinu89/G-GServicePro#readme",
+  "homepage": "https://github.com/chinu89/SocietyLedger#readme",
   "build": {
     "productName": "Gawde Account Service",
     "icon": "assets/icon.ico",
